<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">Background Image</string>
    <string name="app_logo">App Log</string>
    <string name="desired_league">Desired League</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-Ed</string>
    <string name="next">Next</string>
    <string name="background_welcome">background welcome</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="get_started">GET STARTED</string>
    <string name="find_a_league">Find a league in the city, and dominate.</string>
    <string name="finish">finish</string>
    <string name="i_am_a">I am a...</string>
    <string name="toggle_beginner_btn">Beginner</string>
    <string name="toggle_advanced_btn">Advanced</string>
    <string name="search_league">Looking for a co-ed league near you...</string>
</resources>
