<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.SkillActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/imageView5"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/background_image"
            android:scaleType="centerCrop" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0"/>

    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2"
            android:contentDescription="@string/app_logo"
            app:layout_constraintTop_toTopOf="parent" android:scaleType="fitCenter"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
    />
    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/getStartedBtn"
            android:background="#64000000"
            android:padding="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5" android:textColor="#fff" android:textSize="24sp"
            android:fontFamily="@font/montserrat" app:layout_constraintHorizontal_bias="0.0" android:textStyle="bold"/>
    <TextView
            android:text="@string/i_am_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textColor="@android:color/white" android:textSize="20sp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="362dp"
            android:layout_height="wrap_content" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp">
        <ToggleButton
                android:text="@string/toggle_beginner_btn"
                android:layout_width="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_height="wrap_content" android:id="@+id/toggleButton5" android:layout_weight="1"
                android:textOff="@string/toggle_beginner_btn" android:textOn="@string/toggle_beginner_btn" android:background="@drawable/swoosh_toggle"/>
        <ToggleButton
                android:text="@string/toggle_advanced_btn"
                android:layout_width="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_height="wrap_content" android:id="@+id/toggleButton6" android:layout_weight="1"
                android:textOff="@string/toggle_advanced_btn" android:textOn="@string/toggle_advanced_btn" android:background="@drawable/swoosh_toggle"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>